# water-quality-archive-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  go.mod  water-quality-archive.go
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  features.lua  water-quality-archive.rockspec  water-quality-archive_sdk.lua  water-quality-archive_types.lua
php/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  composer.json  config.php  features.php  (+1 more)
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  pyproject.toml  waterqualityarchive_sdk.py  waterqualityarchive_types.py
py/core/: context.py  control.py  error.py  helpers.py  response.py
py/entity/: measurement_entity.py
py/feature/: cache_feature.py  netsim_feature.py  paging_feature.py  rbac_feature.py  streaming_feature.py  telemetry_feature.py  test_feature.py
py/test/: feature_harness.py  runner.py  test_exists.py  test_measurement_direct.py  test_measurement_entity.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py
py/utility/: clean.py  feature_add.py  feature_hook.py  feature_init.py  fetcher.py  make_context.py  make_error.py  make_point.py  make_response.py  make_spec.py  param.py  prepare_auth.py  prepare_method.py  prepare_query.py  register.py  transform_request.py
(+411 files in other folders)
